crates/rome_cli/tests/snapshots/main_commands_check/no_supported_file_found.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
Checked 0 file(s) in <TIME>
```


