crates/rome_cli/tests/snapshots/main_commands_check/parse_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
if

```

# Termination Message

```block
1 errors were emitted while running checks
```

# Emitted Messages

```block
check.js:2:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `(` but instead the file ends
  
    1 │ if
  > 2 │ 
      │ 
  
  i the file ends here
  
    1 │ if
  > 2 │ 
      │ 
  

```


