crates/rome_cli/tests/snapshots/main_commands_check/should_disable_a_rule_group.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "correctness": {
        "recommended": false
      }
    }
  }
}
```

## `fix.js`

```js
try {
    !a && !b;
} catch (err) {
    err = 24;
}

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


