crates/rome_cli/tests/snapshots/main_commands_check/shows_organize_imports_diff_on_check.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "organizeImports": { "enabled": true } }
```

## `check.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js organizeImports ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Import statements could be sorted:
  
    1   │ - import·{·lorem,·foom,·bar·}·from·"foo";
      1 │ + import·{·bar,·foom,·lorem·}·from·"foo";
    2 2 │   import * as something from "../something";
    3 3 │   
  

```

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  

```

```block
Checked 1 file(s) in <TIME>
```


