crates/rome_cli/tests/snapshots/main_commands_check/shows_organize_imports_diff_on_check_apply.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "organizeImports": { "enabled": true } }
```

## `check.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block
check.js organizeImports ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Import statements could be sorted:
  
    1   │ - import·{·lorem,·foom,·bar·}·from·"foo";
      1 │ + import·{·bar,·foom,·lorem·}·from·"foo";
    2 2 │   import * as something from "../something";
    3 3 │   
  

```

```block
check.js check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
Fixed 1 file(s) in <TIME>
```


